Bug 303222 - Assertion on c++ import
Summary: Assertion on c++ import
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources All
: NOR major
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-09 06:59 UTC by Ralf Habacker
Modified: 2013-11-06 17:40 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2012-07-09 06:59:11 UTC
Importing files containing the following macro raises an assertation

#define xyz(a) #a 

An example containing those macros is /usr/include/QtCore/qobjectdefs.h

Reproducible: Always

Steps to Reproduce:
1. start umbrello
2.import /usr/include/QtCore/qobjectdefs.h

Actual Results:  
umbrello raises assertation in ...umbrello/codeimport/kdevcppparser/lexer.cpp Line 427

Expected Results:  
umbrello should raise an assertation
Comment 1 Ralf Habacker 2012-07-09 07:00:15 UTC
Expected Results: 
umbrello should *NOT* raise an assertation
Comment 2 Ralf Habacker 2012-07-09 10:22:41 UTC
SVN commit 1304802 by habacker:

Fixed assertation parsing #define <name>(<value>) #<value>.


 M  +6 -0      preprocesslexer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1304802
Comment 3 Ralf Habacker 2013-11-06 17:40:48 UTC
bug has been closed in 4.10.0