Fixed assertation parsing #define <name>(<value>) #<value>.

BUG:303222

svn path=/trunk/KDE/kdesdk/umbrello/; revision=1304802